refactor code to follow sonarQube rules